--- a/References.html
+++ b/References.html
@@ -25,7 +25,7 @@
 				<a class="nav-link" href="https://iabais.github.io/Fire/FIRE.html">Information about fire</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="">References</a>
+				<a class="nav-link" href="https://iabais.github.io/References/References.html">References</a>
 			</li>
 		</ul>
 	</div>
